FIX: bugs in safari where select-kit is not expanding on iOS (#7118)

--- a/app/assets/stylesheets/common/select-kit/select-kit.scss
+++ b/app/assets/stylesheets/common/select-kit/select-kit.scss
@@ -24,8 +24,6 @@
     z-index: z("dropdown");
 
     .select-kit-body {
-      -webkit-animation: fadein 0.25s;
-      animation: fadein 0.25s;
       display: flex;
       flex-direction: column;
       left: 0;
